--- a/style.css
+++ b/style.css
@@ -116,21 +116,22 @@ h2 {
 
 
 .news-card {
-  background: white;
+  background: rgb(255, 255, 255);
   padding: 8px;
-  margin-bottom: 14px;
-  border-radius: 10px;
-  box-shadow: 0 2px 10px #0001;
+  margin-bottom: 8px;
+  border-radius: 5px;
+  box-shadow: 0 8px 12px #0001;
   border-left: 5px solid #2fa54f;
 }
 
 .news-card h3 {
-  margin-top: 0;
+  margin: 0 0 4px;
 }
 
 .news-card .date {
   color: #777;
   font-size: 0.9rem;
+  margin: 0 0 6px;
 }
 
 
